[tool.poetry]
name = "googleprep"
version = "0.1.0"
description = ""
authors = ["Mike Jones <mwj12@case.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"
pytest = "^5.0"
sphinx = "^2.1"
pyhamcrest = "^1.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
